...
            android:scaleType="fitCenter"
            android:src="@drawable/education"/>

        <Space style="@style/espacio"/>

        <ImageButton
            android:id="@+id/boton_tipo_oferta_empleo"
            android:layout_width="@dimen/dim70"
            android:layout_height="@dimen/dim70"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/job"/>
    </LinearLayout>
...
