...
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>

    </LinearLayout>

...
